fixed toro spacing issue

--- a/css/style.css
+++ b/css/style.css
@@ -518,7 +518,7 @@ form .missing-fields-message {
 	/* #TORO CONTENT */
 
 	.toro-product-container {
-		width: 90%;
+		width: 42rem;
 		height: 25rem;
 		margin: 0;
 	}		
